--- a/JFC Delicacy.html
+++ b/JFC Delicacy.html
@@ -868,59 +868,12 @@
             Add to Cart
           </button>
         </div>
-        <div class="product-container">
-          <div class="product-image-container">
-            <img class="product-image"
-              src="images/products/ugali beef.jpeg">
-          </div>
-
-          <div class="product-name limit-text-to-2-lines">
-            Ugali beef
-          </div>
-
-          <div class="product-rating-container">
-            <img class="product-rating-stars"
-              src="images/ratings/rating-45.png">
-            <div class="product-rating-count link-primary">
-              52
-            </div>
-          </div>
-
-          <div class="product-price">
-            Ksh 120
-          </div>
-
-          <div class="product-quantity-container">
-            <select>
-              <option selected value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-              <option value="10">10</option>
-            </select>
-          </div>
-
-          <div class="product-spacer"></div>
-
-          <div class="added-to-cart">
-            <img src="images/icons/checkmark.png">
-            Added
-          </div>
-
-          <button class="add-to-cart-button button-primary">
-            Add to Cart
-          </button>
-        </div> 
+        
     </div>
     <footer class="">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores officiis aliquid libero maiores nemo delectus assumenda suscipit illum quis. Eum dolor, doloremque sunt nihil voluptatem odio ullam et autem molestiae?
 
     </footer>
-    <script src="scripts/JFC Delicacy.js"></script>
+    <script type="module" src="scripts/JFC Delicacy.js"></script>
   </body>
 </html>
