--- a/JFC Delicacy.html
+++ b/JFC Delicacy.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/JFC-header.css">
     <link rel="stylesheet" href="styles/pages/JFC.css">
+    <link rel="stylesheet" href="footer.css">
   </head>
   <body>
     <div class="JFC-header">
@@ -870,10 +871,43 @@
         </div>
         
     </div>
-    <footer class="">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores officiis aliquid libero maiores nemo delectus assumenda suscipit illum quis. Eum dolor, doloremque sunt nihil voluptatem odio ullam et autem molestiae?
-
-    </footer>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-section">
+                    <h4>Contact Us</h4>
+                    <p>Phone: +254796119299</p>
+                    <p>Email: info@jfcdelicacy.com</p>
+                    <p>Address: 123 Food Street</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Customer Service</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Shipping & Returns</a></li>
+                        <li><a href="#">Contact Form</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Information</h4>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Connect With Us</h4>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com/kayiaaedwardgmail.com_/?__pwa=1" class="social-icon"><img src="images/icons/facebook.jpeg" alt="Facebook"></a>
+                        <a href="#" class="social-icon"><img src="images/icons/instagram.png" alt="Instagram"></a>
+                        <a href="#" class="social-icon"><img src="images/icons/twitter.png" alt="Twitter"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 JFC Delicacy. All rights reserved.</p>
+            </div>
+        </footer> 
     <script type="module" src="scripts/JFC Delicacy.js"></script>
   </body>
 </html>
